--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
     
 		<link href="./_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.BoM3YP60.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C9y67-Tp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CuqHeiMq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CY-m5rA0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C49PEY7M.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DYPmg0Nq.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ck573EC3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DT0edbK4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJ2WkK10.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BWuTmBTb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/eTvpvohU.js">
@@ -35,23 +35,23 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.hyjZFeJ6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CVjgEMhP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B9oGTDYG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.BCn0UvTQ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3._NULo-Re.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C37nXNnH.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--cwls5q--><meta name="description" content="About aaron."/><!----><title>aaron — about</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-cwls5q"><section class="page svelte-cwls5q"><p class="eyebrow svelte-cwls5q">about</p> <h1 class="svelte-cwls5q">Hi</h1> <p class="lede svelte-cwls5q">Im just another computer nerd with an interest in doing things the hard way.</p> <div class="body svelte-cwls5q"><p class="svelte-cwls5q">Jack of many trades, master of none. I love learning about new technical concepts, digging in deep and then chasing the next rabbit down its hole. Over and over and over again.</p> <p class="svelte-cwls5q">I am self taught software engineer. Currently working as a forward deployed engineer for a small CH based RAG company. My day to day conists of building out AI tooling and back end solutions with our customers.</p> <p class="svelte-cwls5q">If you want to collaborate or compare notes, reach out anytime. I certainly have a lot to learn from you.</p></div></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-cwls5q"><section class="page svelte-cwls5q"><p class="eyebrow svelte-cwls5q">about</p> <h1 class="svelte-cwls5q">Hi</h1> <p class="lede svelte-cwls5q">I'm just another computer nerd with an interest in doing things the hard way.</p> <div class="body svelte-cwls5q"><p class="svelte-cwls5q">Jack of many trades, master of none. I love learning about new technical concepts, digging in deep and then chasing the next rabbit down its hole. Over and over and over again.</p> <p class="svelte-cwls5q">I am a self-taught software engineer. Currently working as a forward deployed engineer for a small CH based RAG company. My day to day consists of building out AI tooling and back end solutions with our customers.</p> <p class="svelte-cwls5q">If you want to collaborate or compare notes, reach out anytime. I certainly have a lot to learn from you.</p></div></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_9up9qq = {
+					__sveltekit_12k33me = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C9y67-Tp.js"),
-						import("./_app/immutable/entry/app.Ck573EC3.js")
+						import("./_app/immutable/entry/start.CY-m5rA0.js"),
+						import("./_app/immutable/entry/app.DT0edbK4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
