--- a/blog.html
+++ b/blog.html
@@ -21,12 +21,12 @@
     
 		<link href="./_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.D6GYBZ-e.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C9y67-Tp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CuqHeiMq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CY-m5rA0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C49PEY7M.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DYPmg0Nq.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ck573EC3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DT0edbK4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJ2WkK10.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BWuTmBTb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/eTvpvohU.js">
@@ -35,25 +35,25 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.hyjZFeJ6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CVjgEMhP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B9oGTDYG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.Cepr0OYU.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.CPTokQPc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C37nXNnH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dx6G3CPg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B08_qlop.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--u4k2t--><meta name="description" content="Writing and notes."/><!----><title>aaron — blog</title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/s56h6XVB.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--u4k2t--><meta name="description" content="Writing and notes."/><!----><title>aaron — blog</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-u4k2t"><section class="page svelte-u4k2t"><p class="eyebrow svelte-u4k2t">blog</p> <h1 class="svelte-u4k2t">Here's something I wanted to share.</h1> <p class="lede svelte-u4k2t">Some things I thought was worth sharing with the world.</p> <ul class="list svelte-u4k2t" aria-label="Blog posts"><!--[--><li class="svelte-u4k2t"><a href="/blog/hello-world" class="svelte-u4k2t"><span class="title svelte-u4k2t">Hello World</span> <span class="meta svelte-u4k2t">2025-01-01</span> <span class="summary svelte-u4k2t">If I ever have something I feel is worth sharing I will publish it here.</span></a></li><!--]--></ul></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-u4k2t"><section class="page svelte-u4k2t"><p class="eyebrow svelte-u4k2t">blog</p> <h1 class="svelte-u4k2t">Here's something I wanted to share.</h1> <p class="lede svelte-u4k2t">Some things I thought were worth sharing with the world.</p> <ul class="list svelte-u4k2t" aria-label="Blog posts"><!--[--><li class="svelte-u4k2t"><a href="/blog/hello-world" class="svelte-u4k2t"><span class="title svelte-u4k2t">Hello World</span> <span class="meta svelte-u4k2t">2025-01-01</span> <span class="summary svelte-u4k2t">If I ever have something I feel is worth sharing I will publish it here.</span></a></li><!--]--></ul></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_9up9qq = {
+					__sveltekit_12k33me = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C9y67-Tp.js"),
-						import("./_app/immutable/entry/app.Ck573EC3.js")
+						import("./_app/immutable/entry/start.CY-m5rA0.js"),
+						import("./_app/immutable/entry/app.DT0edbK4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
