--- a/gallery/000033490018.html
+++ b/gallery/000033490018.html
@@ -21,12 +21,12 @@
     
 		<link href="../_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/7.D-T_bK3c.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.C9y67-Tp.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CuqHeiMq.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CY-m5rA0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/C49PEY7M.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DYPmg0Nq.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.Ck573EC3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DT0edbK4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DJ2WkK10.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BWuTmBTb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/eTvpvohU.js">
@@ -35,25 +35,25 @@
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.hyjZFeJ6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CVjgEMhP.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/B9oGTDYG.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/7.DY6tszxW.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/yBc3Ei89.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/7.DHjzvP2V.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ChgoYroD.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CBbuBPfZ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/fUai8UT4.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--s6jaqj--><meta name="description" content="Fujifilm Fujicolor 200"/><!----><title>Taking refuge from the sun — aaron</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-s6jaqj"><article class="page svelte-s6jaqj"><div class="header"><p class="eyebrow svelte-s6jaqj">gallery</p> <h1 class="svelte-s6jaqj">Taking refuge from the sun</h1> <p class="meta svelte-s6jaqj">Fujifilm Fujicolor 200</p></div> <div class="image-section svelte-s6jaqj"><div class="frame svelte-s6jaqj"><picture class="svelte-s6jaqj"><source type="image/avif" srcset="/images/gallery/000033490018-400.avif 400w, /images/gallery/000033490018-800.avif 800w, /images/gallery/000033490018-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw"/> <img src="/images/gallery/000033490018-1200.avif" alt="Fujifilm Fujicolor 200" width="1200" height="795.3398058252427" loading="lazy" decoding="async" fetchpriority="low" style="aspect-ratio: 1.5087890625;" srcset="/images/gallery/000033490018-400.avif 400w, /images/gallery/000033490018-800.avif 800w, /images/gallery/000033490018-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw" class="svelte-s6jaqj"/></picture></div> <p class="full svelte-s6jaqj"><a href="/images/gallery/000033490018.avif" rel="noreferrer" target="_blank" class="svelte-s6jaqj">Open full AVIF</a></p> <!--[--><p class="description svelte-s6jaqj">In some places existing is survival. In southern Utah during the peak of summer shade is sparse. The harshness of the climate has a certain terrifying beauty to it.</p><!--]--></div></article></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-s6jaqj"><article class="page svelte-s6jaqj"><div class="header"><p class="eyebrow svelte-s6jaqj">gallery</p> <h1 class="svelte-s6jaqj">Taking refuge from the sun</h1> <p class="meta svelte-s6jaqj">Fujifilm Fujicolor 200</p></div> <div class="image-section svelte-s6jaqj"><div class="frame svelte-s6jaqj"><picture class="svelte-s6jaqj"><source type="image/avif" srcset="/images/gallery/000033490018-400.avif 400w, /images/gallery/000033490018-800.avif 800w, /images/gallery/000033490018-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw"/> <img src="/images/gallery/000033490018-1200.avif" alt="Fujifilm Fujicolor 200" width="1200" height="795.3398058252427" loading="lazy" decoding="async" fetchpriority="low" style="aspect-ratio: 1.5087890625;" srcset="/images/gallery/000033490018-400.avif 400w, /images/gallery/000033490018-800.avif 800w, /images/gallery/000033490018-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw" class="svelte-s6jaqj"/></picture></div> <p class="full svelte-s6jaqj"><a href="/images/gallery/000033490018.avif" rel="noreferrer" target="_blank" class="svelte-s6jaqj">Open full AVIF</a></p> <!--[--><p class="description svelte-s6jaqj">In some places existing is survival. In southern Utah during the peak of summer, shade is sparse. The harshness of the climate has a certain terrifying beauty to it.</p><!--]--></div></article></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_9up9qq = {
+					__sveltekit_12k33me = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.C9y67-Tp.js"),
-						import("../_app/immutable/entry/app.Ck573EC3.js")
+						import("../_app/immutable/entry/start.CY-m5rA0.js"),
+						import("../_app/immutable/entry/app.DT0edbK4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
