--- a/projects.html
+++ b/projects.html
@@ -21,12 +21,12 @@
     
 		<link href="./_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/8.CmmO_rDo.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C9y67-Tp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CuqHeiMq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CY-m5rA0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C49PEY7M.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DYPmg0Nq.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ck573EC3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DT0edbK4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJ2WkK10.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BWuTmBTb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/eTvpvohU.js">
@@ -35,25 +35,25 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.hyjZFeJ6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CVjgEMhP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B9oGTDYG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/8.Uv711NkH.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/8.KLt_W9PB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C37nXNnH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dx6G3CPg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/4LSGJv5n.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--rqn88j--><meta name="description" content="Projects by aaron."/><!----><title>aaron — projects</title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/TLurzyJf.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--rqn88j--><meta name="description" content="Projects by aaron."/><!----><title>aaron — projects</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-rqn88j"><section class="page svelte-rqn88j"><p class="eyebrow svelte-rqn88j">projects</p> <h1 class="svelte-rqn88j">Work in progress.</h1> <p class="lede svelte-rqn88j">A short list of things I have dabbled in which I thought was worth sharing. Most of these are one off projects I did to learn something.</p> <ul class="list svelte-rqn88j" aria-label="Projects"><!--[--><li class="svelte-rqn88j"><a href="/projects/rado-graph" class="svelte-rqn88j"><span class="title svelte-rqn88j">Rado Graph</span> <span class="summary svelte-rqn88j">I got sucked down a Youtube rabbit hole about Rado graphs by Matt Parker and wanted a little project to play with typescript on my personal page.</span></a></li><!--]--></ul></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-rqn88j"><section class="page svelte-rqn88j"><p class="eyebrow svelte-rqn88j">projects</p> <h1 class="svelte-rqn88j">Work in progress.</h1> <p class="lede svelte-rqn88j">A short list of things I have dabbled in which I thought were worth sharing. Most of these are one-off projects I did to learn something.</p> <ul class="list svelte-rqn88j" aria-label="Projects"><!--[--><li class="svelte-rqn88j"><a href="/projects/rado-graph" class="svelte-rqn88j"><span class="title svelte-rqn88j">Rado Graph</span> <span class="summary svelte-rqn88j">I got sucked down a YouTube rabbit hole about Rado graphs by Matt Parker and wanted a little project to play with typescript on my personal page.</span></a></li><!--]--></ul></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_9up9qq = {
+					__sveltekit_12k33me = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C9y67-Tp.js"),
-						import("./_app/immutable/entry/app.Ck573EC3.js")
+						import("./_app/immutable/entry/start.CY-m5rA0.js"),
+						import("./_app/immutable/entry/app.DT0edbK4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
