add gallery content + change font family

--- a/projects.html
+++ b/projects.html
@@ -19,20 +19,20 @@
       })();
     </script>
     
-		<link href="./_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.D_GryE5E.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/8.CmmO_rDo.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DAQPL1KA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BnQx__z7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B-SZPfLx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GEHBtNfq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DYPmg0Nq.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Da464m5B.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.hiLj3jCZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJ2WkK10.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BWuTmBTb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/eTvpvohU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CZzCDLoH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DgURNtEw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.hyjZFeJ6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bh33LLVX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CVjgEMhP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B9oGTDYG.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/8.KLt_W9PB.js">
@@ -45,15 +45,15 @@
 			
 			<script>
 				{
-					__sveltekit_1axvp3w = {
+					__sveltekit_1d5tk0r = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DAQPL1KA.js"),
-						import("./_app/immutable/entry/app.Da464m5B.js")
+						import("./_app/immutable/entry/start.B-SZPfLx.js"),
+						import("./_app/immutable/entry/app.hiLj3jCZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
